spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__zeroextending_to_shorter_value.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> uint<4> {
    let a: uint<8> = 0;
    let b: uint<4> = std::conv::zext(a);
    b
}


error: Zero-extending to a shorter value
  ┌─ testinput:3:22
  │
3 │     let b: uint<4> = std::conv::zext(a);
  │                      ^^^^^^^^^^^^^^^^^^
  │                      │               │
  │                      │               This value is 8 bits
  │                      The value is zero-extended to 4 bits here
  │
  = Zero-extension cannot decrease width, use trunc instead
  │
3 │     let b: uint<4> = trunc(a);
  │                      ~~~~~


